Fix overflow issue with header menu

--- a/styles/base.css
+++ b/styles/base.css
@@ -42,4 +42,5 @@ html {
 
 body {
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
