--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,6 @@
 /* 
  * Header styles 
  */
-body {
-  margin: 0;
-}
 
 header {
   display: flex;
